Korjattu dependencyt ja testit